2025-01-03  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-mode.el (howm-insert-template-string):
	fix double calls to howm-template-string
	thx > Nicolai Singh san (nicolaisingh at pm.me)
	https://github.com/kaorahi/howm/pull/26

2024-12-31  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* configure.ac: version 1.5.2

2024-12-22  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* riffle.el (riffle-pop-to-buffer):
	avoid double-splitting windows when display-buffer-base-action is non-nil
	thx > Kevin Fleming san (kvnflm at gmail.com)
	https://github.com/kaorahi/howm/pull/21

	* riffle.el (riffle-protected-localvar-prefixes): fix faces issue
	thx > @mmarshall540 san
	https://github.com/kaorahi/howm/issues/22

	* howm-vars.el (howm-recent-excluded-files-regexp):
	add a user-option to exclude certain files from the recent-note lists
	thx > @mmarshall540 san
	https://github.com/kaorahi/howm/pull/23

	* howm-mode.el (howm-list-recent): ditto.

	* howm-menu.el (howm-recent-menu): ditto.

	* howm-common.el (howm-recent-items-filter): ditto.

2024-11-21  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* README.md: update colorscheme link
	thx > Jabir Ali Ouassou san (jabir.ali.ouassou at hvl.no)
	https://github.com/kaorahi/howm/pull/20

2024-11-02  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-view.el
	(howm-view-filter-methods): add filter-by-keyword to support aliases
	(howm-view-filter-by-keyword-in-summary): ditto
	(howm-view-filter-by-keyword-in-contents): ditto
	(howm-view-filter-by-keyword-general): ditto
	thx > Pere Quintana san (@bitic)
	https://github.com/kaorahi/howm/issues/19

2024-10-14  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* riffle.el (riffle-mode):
	summary/contents buffers inherit from text-mode
	thx > Jabir Ali Ouassou san (jabir.ali.ouassou at hvl.no)
	https://github.com/kaorahi/howm/issues/11

2024-09-26  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-menu.el (howm-menu-mode, howm-menu-refresh-note):
	add hint to prevent typical misuse of menu